add error messages to auth forms

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,8 @@
     <title><%= title %></title>
   </head>
   <body>
+    <%- include('partials/header', { auth: auth }) %>
+
     <main><%- body %></main>
   </body>
 </html>
-
