--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,9 @@
   <label for="password">Password:</label>
   <input type="password" id="password" name="password" required />
 
+  <% if (error) { %>
+    <label id="error-message" style="color: red;"><%= error %></label>
+  <% } %>
   <button type="submit">Login</button>
 </form>
 
