--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,10 +1,15 @@
-<h2>Become a <span>Member</span></h2>
+<h2>Sign Up</h2>
 <form action="/signup" method="POST">
   <label for="email">Email</label>
   <input type="email" id="email" name="email" required /><br />
+
   <label id="pw-label" for="password">Password</label>
   <input type="password" id="password" name="password" required />
-  <label id="error-message"></label>
+
+  <% if (error) { %>
+  <label id="error-message" style="color: red"><%= error %></label>
+  <% } %>
+
   <button type="submit">Sign Up</button>
 </form>
 <a class="back" href="/">Go Back</a>
