--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
+
+    <link rel="stylesheet" href="/styles/reset.css" />
+    <link rel="stylesheet" href="/styles/variables.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
   </head>
   <body>
     <%- include('partials/header', { auth: auth }) %>
-
     <main><%- body %></main>
   </body>
 </html>
