--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,12 +8,12 @@
   <form action="/signup" method="POST">
     <div class="item">
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" required /><br />
+      <input type="email" id="email" name="email" placeholder="example@email.com" required /><br />
     </div>
 
     <div class="item">
       <label id="pw-label" for="password">Password</label>
-      <input type="password" id="password" name="password" required />
+      <input placeholder="●●●●●●●" type="password" id="password" name="password" required />
     </div>
 
     <% if (error) { %>
