join sign up and login into one file

--- a/public/styles/variables.css
+++ b/public/styles/variables.css
@@ -2,5 +2,5 @@
   --link: rgb(104, 156, 218);
   --link-hover: rgb(61, 111, 173);
 
-  --page-bg: linear-gradient(90deg, #2d1077, #333579);
+  --page-bg: linear-gradient(90deg, #3f2385, #61338f);
 }
