--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/styles/main.css" />
   </head>
   <body>
-    <%- include('partials/header', { auth: auth }) %>
+    <%- include('partials/header')%>
     <main><%- body %></main>
   </body>
 </html>
