--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -2,12 +2,30 @@ main {
   display: grid;
   place-content: center center;
   grid-template-columns: 50% 50%;
+  grid-template-areas: "left right";
 }
 main > div {
   margin: auto;
   width: 60%;
   height: auto;
 }
+
+/* ---------- LEFT SIDE --------------- */
+
+.left {
+  font-size: 1.5rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  margin-top: 2rem;
+}
+.left .text {
+  margin-bottom: 2rem;
+}
+
+/* ---------- RIGHT SIDE -------------- */
 
 .right {
   background-color: #fefefe;
@@ -17,6 +35,7 @@ main > div {
   border-radius: 0.5rem;
   box-shadow: 1rem 1rem rgba(231, 231, 231, 0.722);
 
+  justify-self: start;
   display: flex;
   flex-direction: column;
 }
