--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,16 +3,22 @@
 html {
   width: 100%;
   height: 100%;
+
+  background: var(--page-bg);
 }
 body {
-  background: var(--page-bg); 
   font-family: Roboto, system-ui;
 
+  max-width: 1900px;
   height: 100%;
 
   color: #fff;
 
   display: grid;
   grid-template-rows: 100px 1fr 100px;
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
   gap: 1rem;
 }
