change signup text

--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -3,7 +3,7 @@
 <div class="left">
   <div class="text">
     <h1><%= isLogin ? 'Log In' : 'Sign Up' %></h1>
-    <p><%= isLogin ? 'Welcome back! Please login to your account.' : 'Create an account to get started.' %></p>
+    <p><%= isLogin ? 'Welcome back! Please login to your account.' : 'Create an account to start sharing files.' %></p>
   </div>
 
   <img src="/images/undraw_files_sent_re_kv00.svg" alt="Illustration" />
