--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/styles/auth.css" />
+<link rel="stylesheet" href="/pages/auth.css" />
 
 <div class="left">
   <div class="text">
@@ -6,7 +6,7 @@
     <p><%= isLogin ? 'Welcome back! Please login to your account.' : 'Create an account to start sharing files.' %></p>
   </div>
 
-  <img src="/images/undraw_files_sent_re_kv00.svg" alt="Illustration" />
+  <img src="/assets/undraw_files_sent_re_kv00.svg" alt="Illustration" />
 </div>
 
 <div class="right">
