--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,12 @@
-<link rel="stylesheet" href="/styles/header.css" />
+<link rel="stylesheet" href="/components/header/header.css" />
+<script src="/components/header/loading.js"></script>
 
 <header>
+  <div class="loading"></div>
   <div class="links">
     <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href="">Github</a>
+    <a href="https://github.com/Uruwhy1/odin-fileUploader">Github</a>
   </div>
 
   <div class="auth">
