--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
 
-    <link rel="stylesheet" href="/styles/reset.css" />
-    <link rel="stylesheet" href="/styles/variables.css" />
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="/variables.css" />
+    <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
     <%- include('partials/header')%>
