--- a/public/components/header/header.css
+++ b/public/components/header/header.css
@@ -17,6 +17,7 @@ header div {
 header a {
   color: #fff;
   text-decoration: none;
+  font-weight: 500;
 }
 header a:hover {
   text-decoration: underline;
