add media queries for auth page and header

--- a/public/components/header/header.css
+++ b/public/components/header/header.css
@@ -38,3 +38,13 @@ header a:hover {
 .loading.active {
   transform: scaleX(1);
 }
+
+@media screen and (max-width: 700px) {
+  header {
+    justify-content: center;
+  }
+
+  header .auth {
+    display: none;
+  }
+}
