--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,1 +1,15 @@
-testtest
+<h1>Upload File</h1>
+<form action="/upload" method="POST" enctype="multipart/form-data">
+  <label for="file">Choose file:</label>
+  <input type="file" id="file" name="file" required />
+  <button type="submit">Upload</button>
+</form>
+
+<h1>Create Folder</h1>
+<form action="/folders" method="POST">
+  <label for="folderName">Folder Name:</label>
+  <input type="text" id="folderName" name="name" required />
+  <button type="submit">Create Folder</button>
+</form>
+
+<a href="/logout">Logout</a>
