--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,8 @@
-<h1>Upload File</h1>
-<form action="/upload" method="POST" enctype="multipart/form-data">
-  <label for="file">Choose file:</label>
-  <input type="file" id="file" name="file" required />
-  <button type="submit">Upload</button>
-</form>
-
-<a href="/logout">Logout</a>
+<div>
+  <h2>Your Folders:</h2>
+  <ul>
+    <% folders.forEach(folder => { %>
+    <li><%= folder.name %></li>
+    <% }) %>
+  </ul>
+</div>
