--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,20 @@
       <button class="delete-folder-btn" data-id="<%= folder.id %>">
         Delete
       </button>
+      <form
+        action="/folders/<%= folder.id %>/edit"
+        method="POST"
+        style="display: inline"
+      >
+        <input
+          type="text"
+          name="newName"
+          placeholder="New folder name"
+          required
+          style="display: inline"
+        />
+        <button type="submit">Rename</button>
+      </form>
     </li>
     <% }) %>
   </ul>
