--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,14 @@
-<h1>Upload File</h1>
 <form action="/upload" method="POST" enctype="multipart/form-data">
   <label for="file">Choose file:</label>
   <input type="file" id="file" name="file" required />
+
+  <label for="folder">Select Folder:</label>
+  <select id="folder" name="folderId" required>
+    <% folders.forEach(folder => { %>
+    <option value="<%= folder.id %>"><%= folder.name %></option>
+    <% }) %>
+  </select>
+
   <button type="submit">Upload</button>
 </form>
 
