add homepage blueprint

--- a/public/main.css
+++ b/public/main.css
@@ -15,9 +15,8 @@ body {
   color: #fff;
 
   display: grid;
-  grid-template-rows: 100px 1fr 100px;
+  grid-template-rows: 100px 1fr;
   grid-template-areas:
     "header"
-    "main"
-    "footer";
+    "main";
 }
