show recent files when no folder is selected && change title depending on folder

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,6 +15,6 @@
 </div>
 
 <div class="files">
-  <h2>Files in folder</h2>
+  <h2 id="folder-name">Last Files...</h2>
   <div id="file-list"></div>
 </div>
