--- a/public/pages/home.css
+++ b/public/pages/home.css
@@ -30,6 +30,8 @@ main > div {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+
+  user-select: none;
 }
 
 /* Right side styling */
