--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,16 +6,38 @@
   <div class="links">
     <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href="https://github.com/Uruwhy1/odin-fileUploader">Github</a>
+    <a target="_blank" href="https://github.com/Uruwhy1/odin-fileUploader"
+      >Github</a
+    >
   </div>
 
   <div class="auth">
-  <% if (!auth) { %>
+    <% if (!auth) { %>
     <a href="/signup">Sign Up</a>
-    <a href="/login">Log In</a> 
-  <% } else { %> 
-    <a href="/logout">Log Out</a>
-  <% } %>
-  </div>
+    <a href="/login">Log In</a>
+    <% } else { %>
 
+    <div class="user-menu">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="feather feather-user"
+      >
+        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+        <circle cx="12" cy="7" r="4"></circle>
+      </svg>
+      <p class="username"><%= username %></p>
+      <div class="dropdown">
+        <a href="/logout">Log Out</a>
+      </div>
+    </div>
+    <% } %>
+  </div>
 </header>
