--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
-<link rel="stylesheet" href="/pages/home.css" />
-<script src="/pages/home.js"></script>
+<link rel="stylesheet" href="/pages/home/home.css" />
+<script src="/pages/home/fetchFiles.js"></script>
+<script src="/pages/home/modals.js"></script>
 
 <div class="folders">
   <% folders.forEach((folder) => { %>
@@ -10,11 +11,45 @@
 </div>
 
 <div class="actions">
-  <a href="/folders/create">Create Folder</a>
-  <a href="/files/upload">Upload File</a>
+  <button id="uploadButton">Upload a File</button>
+  <button id="createFolderButton">Create a Folder</button>
 </div>
 
 <div class="files">
   <h2 id="folder-name">Last Files...</h2>
   <div id="file-list"></div>
+</div>
+
+<div class="modal-container">
+  <div id="upload-modal" class="modal">
+    <h4>Upload File</h4>
+    <form action="/upload" method="POST" enctype="multipart/form-data">
+      <label for="file">Choose file:</label>
+      <input type="file" id="file" name="file" required />
+
+      <label for="folder">Select Folder:</label>
+      <select id="folder" name="folderId" required>
+        <% folders.forEach(folder => { %>
+        <option value="<%= folder.id %>"><%= folder.name %></option>
+        <% }) %>
+      </select>
+
+      <div class="buttons">
+        <button type="button" class="back">Back</button>
+        <button type="submit" class="submit">Upload File</button>
+      </div>
+    </form>
+  </div>
+  <div id="create-folder-modal" class="modal">
+    <h4>Create Folder</h4>
+    <form action="/folders" method="POST">
+      <label for="folderName">Folder Name:</label>
+      <input type="text" id="folderName" name="name" required />
+
+      <div class="buttons">
+        <button type="button" class="back">Back</button>
+        <button type="submit" class="submit">Create Folder</button>
+      </div>
+    </form>
+  </div>
 </div>
