--- a/public/pages/home/home.css
+++ b/public/pages/home/home.css
@@ -4,6 +4,8 @@ main {
   grid-template-areas: "left right";
   gap: 1rem;
   padding: 0 1rem 1rem 1rem;
+
+  color: #000;
 }
 
 main > div {
@@ -18,6 +20,7 @@ main > div {
 
 .actions {
   margin-right: calc(0.35rem);
+  background-color: transparent;
 
   display: flex;
   gap: 1rem;
@@ -26,7 +29,6 @@ main > div {
 
 .actions button {
   padding: 10px;
-  color: #000;
   font-weight: 500;
 
   border: none;
@@ -46,7 +48,7 @@ main > div {
 /* --------------------------------------------------- */
 
 .folders {
-  background-color: rgb(255, 223, 223);
+  background-color: var(--container-bg);
 
   border-radius: 5px;
   padding: 1rem;
@@ -76,7 +78,8 @@ main > div {
 /* --------------- RIGHT SIDE STYLING -----------------
 -------------------------------------------------------*/
 .files {
-  background-color: rgb(192, 192, 255);
+  background-color: var(--container-bg);
+
   flex-grow: 1;
 
   border-radius: 5px;
