--- a/public/variables.css
+++ b/public/variables.css
@@ -7,6 +7,8 @@
   --home-action: rgb(255, 255, 255);
   --home-action-hover: rgb(255, 230, 209);
 
+  --button-box-shadow: rgba(229, 229, 229, 0.787);
+
   --link: var(--accent);
 
   --loading-bar: skyblue;
