--- a/public/pages/home/home.css
+++ b/public/pages/home/home.css
@@ -81,23 +81,6 @@ main > div {
   justify-content: space-between;
   gap: 1rem;
   align-items: center;
-
-  > button {
-    background-color: #fff;
-    border: 0;
-    box-shadow: 0.2rem 0.2rem var(--button-box-shadow);
-
-    cursor: pointer;
-    transition: 0.5s;
-
-    &:hover {
-      --button-box-shadow: var(--accent);
-
-      > svg {
-        stroke: var(--accent);
-      }
-    }
-  }
 }
 
 .svgs {
@@ -116,17 +99,62 @@ main > div {
   }
 }
 
-.rename-input {
-  width: 100%;
+.rename-container {
+  overflow: hidden;
+  transition: all 0.7s;
 
-  padding: 0.25rem;
+  max-height: 200px;
 
-  border-radius: 1px;
-  border: none;
+  display: flex;
+  gap: 0.2rem;
+  justify-content: center;
+  align-items: center;
 
-  ~ .svgs {
-    display: none;
+  margin-top: -5px;
+  margin-bottom: 0;
+
+  > button {
+    background-color: #fff;
+    border: none;
+
+    margin: 0.2rem;
+    box-shadow: 0.2rem 0.2rem var(--button-box-shadow);
+
+    cursor: pointer;
+    transition: 0.5s;
+
+    &:hover {
+      --button-box-shadow: var(--accent);
+
+      > svg {
+        stroke: var(--accent);
+      }
+    }
+    > svg {
+      margin-left: 0.2rem;
+    }
   }
+
+  > input {
+    border: none;
+    margin-left: 2px;
+
+    box-shadow: 0rem 0.2rem var(--button-box-shadow);
+    transition: 0.5s;
+  }
+
+  > *:focus {
+    --button-box-shadow: var(--accent);
+    outline: none;
+
+    > svg {
+      stroke: var(--accent);
+    }
+  }
+}
+.rename-container.hidden {
+  max-height: 0;
+  opacity: 0;
 }
 
 /* --------------- RIGHT SIDE STYLING -----------------
