--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
       id="<%= folder.id %>"
       data-folder-id="<%= folder.id %>"
     >
-      <span><%= folder.name %></span>
+      <span id="name-<%= folder.id %>"><%= folder.name %></span>
       <div class="svgs">
         <svg
           id="rename-folder-btn"
@@ -60,6 +60,30 @@
           <line x1="14" y1="11" x2="14" y2="17"></line>
         </svg>
       </div>
+    </div>
+    <div class="rename-container hidden" id="rename-<%= folder.id %>">
+      <input
+        tabindex="-1"
+        type="text"
+        class="rename-input"
+        id="<%= folder.id %>"
+      />
+      <button tabindex="-1" id="<%= folder.id %>" class="save-rename-btn">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feather feather-check"
+        >
+          <polyline points="20 6 9 17 4 12"></polyline>
+        </svg>
+      </button>
     </div>
     <% }) %>
   </div>
