--- a/views/home.ejs
+++ b/views/home.ejs
@@ -103,6 +103,9 @@
       <label for="file">Choose file:</label>
       <input type="file" id="file" name="file" required />
 
+      <label for="name">Name:</label>
+      <input type="name" id="name" name="name" required />
+
       <label for="folder">Select Folder:</label>
       <select id="folder" name="folderId" required>
         <% folders.forEach(folder => { %>
