--- a/public/pages/home/home.css
+++ b/public/pages/home/home.css
@@ -168,6 +168,55 @@ main > div {
   padding: 1rem;
 }
 
+#file-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.file-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+
+  width: 100%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  &:hover {
+    background-color: var(--accent-background);
+  }
+}
+
+.file-title {
+  flex-grow: 1;
+  font-weight: 500;
+}
+
+.file-preview {
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+.file-item a {
+  margin-left: 0.5rem;
+
+  text-decoration: none;
+  color: #007bff;
+  font-weight: bold;
+}
+
+.file-item a:hover {
+  text-decoration: underline;
+}
+
 /* ------------------- MODALS -------------------------
 -------------------------------------------------------*/
 
