--- a/public/pages/home/home.css
+++ b/public/pages/home/home.css
@@ -167,6 +167,9 @@ main > div {
   border-radius: 5px;
   padding: 1rem;
 }
+.files h2 {
+  text-transform: uppercase;
+}
 
 #file-list {
   display: flex;
@@ -178,6 +181,7 @@ main > div {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 1rem;
 
   padding: 10px;
   border: 1px solid #ccc;
@@ -186,6 +190,7 @@ main > div {
   width: 100%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
+  transition: 0.1s;
   &:hover {
     background-color: var(--accent-background);
   }
@@ -197,8 +202,8 @@ main > div {
 }
 
 .file-preview {
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   object-fit: cover;
 
   border-radius: 5px;
@@ -206,15 +211,8 @@ main > div {
 }
 
 .file-item a {
-  margin-left: 0.5rem;
-
-  text-decoration: none;
   color: #007bff;
-  font-weight: bold;
-}
-
-.file-item a:hover {
-  text-decoration: underline;
+  margin-right: 0.5rem;
 }
 
 /* ------------------- MODALS -------------------------
