--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,8 @@
 <link rel="stylesheet" href="/pages/home/home.css" />
-<script src="/pages/home/fetchFiles.js"></script>
-<script src="/pages/home/modals.js"></script>
+<script type="module" src="/pages/home/utils.js"></script>
+<script type="module" src="/pages/home/deleteFile.js"></script>
+<script type="module" src="/pages/home/fetchFiles.js"></script>
+<script type="module" src="/pages/home/modals.js"></script>
 <script src="/pages/home/folderButtons.js"></script>
 
 <div class="left">
