--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,7 @@
 
 <header>
   <div class="loading"></div>
+  <div id="popup" class="pop-up">t</div>
   <div class="links">
     <a href="/">Home</a>
     <a href="/about">About</a>
