--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/pages/home/home.css" />
-<script type="module" src="/pages/home/utils.js"></script>
+<script type="module" src="/utils.js"></script>
 <script type="module" src="/pages/home/deleteFile.js"></script>
 <script type="module" src="/pages/home/fetchFiles.js"></script>
 <script type="module" src="/pages/home/modals.js"></script>
