--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,9 @@
 
 <header>
   <div class="loading"></div>
-  <div id="popup" class="pop-up">t</div>
+  <div id="popup" class="pop-up">
+    <div class="pop-up-content"></div>
+  </div>
   <div class="links">
     <a href="/">Home</a>
     <a href="/about">About</a>
