--- a/public/components/header/header.css
+++ b/public/components/header/header.css
@@ -21,90 +21,53 @@
   left: 50%;
   transform: translateX(-50%);
 
-  color: #000;
+  font-size: 1.1rem;
 
-  border-radius: 5px;
-
-  top: -4rem;
-  transition: all 0.3s;
+  top: -6rem;
+  transition: all 0.6s;
   z-index: 1;
 
-  display: block;
+  border-radius: 6px;
+  padding: 1.5rem;
+
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 
   &.active {
-    top: 1.1rem;
-  }
-}
-
-@property --angle {
-  syntax: "<angle>";
-  initial-value: 0deg;
-  inherits: false;
-}
-
-.pop-up-content {
-  position: relative;
-  width: 100%;
-  height: 100%;
-
-  background-color: #fff;
-  border-radius: 10px;
-  padding: 1rem 2rem;
-
-  &::after,
-  &::before {
-    box-sizing: content-box;
-
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-
-    height: 100%;
-    width: 100%;
-
-    border-radius: 10px;
-    padding: 3px;
-
-    z-index: -1;
-
-    animation: 2s spin linear infinite;
-  }
-  &::before {
-    filter: blur(1.5rem);
+    top: 0.5rem;
   }
 
   &.success {
-    &::after,
-    &::before {
-      background-image: conic-gradient(
-        from var(--angle),
-        transparent 70%,
-        var(--success-popup-bg)
-      );
+    background-color: var(--success);
+    box-shadow: 0.35rem 0.35rem var(--success-shadow);
+
+    color: var(--success-text);
+    font-weight: normal;
+
+    > p::before {
+      content: "Success:";
+      font-weight: bold;
+      margin-right: 5px;
     }
   }
-
   &.failure {
-    &::after,
-    &::before {
-      background-image: conic-gradient(
-        from var(--angle),
-        transparent 70%,
-        var(--failure-popup-bg)
-      );
+    background-color: var(--error);
+    box-shadow: 0.35rem 0.35rem var(--error-shadow);
+
+    color: var(--error-text);
+    font-weight: normal;
+
+    > p::before {
+      content: "Failure:";
+      font-weight: bold;
+      margin-right: 5px;
     }
   }
 }
-
-@keyframes spin {
-  from {
-    --angle: 0deg;
-  }
-  to {
-    --angle: 360deg;
-  }
+.pop-up svg {
+  height: 30px;
+  width: 30px;
 }
 
 /* -------------------------------------- -*/
