--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,9 @@
 <link rel="stylesheet" href="/components/header/header.css" />
 <script src="/components/header/loading.js"></script>
 
+<div class="loading"></div>
+<div class="pop-up" id="popup"></div>
 <header>
-  <div class="loading"></div>
-  <div id="popup" class="pop-up">
-    <div class="pop-up-content"></div>
-  </div>
   <div class="links">
     <a href="/">Home</a>
     <a href="/about">About</a>
