refactor try/catch blocks

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <script type="module" src="/pages/home/deleteFile.js"></script>
 <script type="module" src="/pages/home/fetchFiles.js"></script>
 <script type="module" src="/pages/home/modals.js"></script>
-<script src="/pages/home/folderButtons.js"></script>
+<script type="module" src="/pages/home/folderButtons.js"></script>
 
 <div class="left">
   <div class="actions">
