reorganize pop-ups and loading bar code

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="/variables.css" />
     <link rel="stylesheet" href="/main.css" />
+
+    <script src="/components/header/loading.js"></script>
   </head>
   <body>
+    <div class="loading"></div>
+    <div class="pop-up" id="popup"></div>
     <%- include('partials/header')%>
     <main><%- body %></main>
   </body>
